force-app/main/default/objects/Staff__c/fields/Hire_Status__c.field-meta.xml
<CustomField>
    <fullName>Hire_Status__c</fullName>
    <label>Hire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>