force-app/main/default/objects/Staff__c/fields/Tax_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Tax_Eligibility__c</fullName>
    <label>Tax Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Non-eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>