force-app/main/default/objects/Staff__c/fields/Tax_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Filing_Status__c</fullName>
    <label>Tax Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tax_Eligibility__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filed</fullName>
                <default>true</default>
                <label>Filed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>