force-app/main/default/objects/Staff__c/fields/Total_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Total_Agreements__c</fullName>
    <inlineHelpText>Total agreements we had with this staff member</inlineHelpText>
    <label>Total Agreements</label>
    <summaryForeignKey>Agreement__c.Related_Staff__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>