force-app/main/default/objects/Staff__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <inlineHelpText>Total Amount paid through out the agreements</inlineHelpText>
    <label>Total Amount Paid</label>
    <summarizedField>Agreement__c.Total_Payments__c</summarizedField>
    <summaryForeignKey>Agreement__c.Related_Staff__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>