force-app/main/default/objects/Staff__c/fields/W_2_Form__c.field-meta.xml
<CustomField>
    <fullName>W_2_Form__c</fullName>
    <label>W-2 Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>