force-app/main/default/objects/Staff__c/listViews/Active_Teachers.listView-meta.xml
<ListView>
    <fullName>Active_Teachers</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Pending_Payments__c</columns>
    <columns>Phone__c</columns>
    <columns>Hire_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hire_Status__c</field>
        <operation>notEqual</operation>
        <value>InActive</value>
    </filters>
    <label>Active Staff</label>
</ListView>