force-app/main/default/objects/Staff__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Pending_Payments__c</columns>
    <columns>Total_Amount_Paid__c</columns>
    <columns>Total_Work_Units__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>